--- a/css/style.css
+++ b/css/style.css
@@ -789,7 +789,7 @@ a:hover {
 }
 
 .team-member {
-  height: 250px;
+  height: 350px;
   padding: 30px 45px;
   background: #fff;
   box-shadow: 0px 23px 43px 0px rgba(172, 189, 199, 0.49);
@@ -799,6 +799,14 @@ a:hover {
 @media (max-width: 1200px) {
   .team-member {
     padding: 30px;
+    height: auto;
+  }
+}
+
+@media (max-width: 1400px) {
+  .team-member {
+    padding: 30px;
+    height: auto;
   }
 }
 
@@ -1036,7 +1044,7 @@ a:hover {
 .social-icon li a {
   height: 45px;
   width: 45px;
-  background: #fff;
+  background: #DFEC04;
   border-radius: 5px;
   line-height: 45px;
   display: block;
@@ -1368,3 +1376,58 @@ textarea.form-control {
 }
 
 /*# sourceMappingURL=maps/style.css.map */
+
+
+.bottom-border{
+  border-bottom: 4px solid #000;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+}
+
+.section-m{
+  padding-top: 80px !important;
+  padding-bottom: 80px !important;
+}
+
+
+
+/* The Modal (background) */
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1; /* Sit on top */
+            padding-top: 100px; /* Location of the box */
+            left: 0;
+            top: 0;
+            width: 100%; /* Full width */
+            height: 100%; /* Full height */
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgb(0,0,0); /* Fallback color */
+            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+        }
+
+        /* Modal Content */
+        .modal-content {
+            background-color: #fefefe;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+        }
+
+        /* The Close Button */
+        .close {
+            color: #aaaaaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: #000;
+            text-decoration: none;
+            cursor: pointer;
+        }
