--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,7 +8,7 @@ $dark: #212329;
 $black: #000;
 $white: #fff;
 
-$primary-gradient: linear-gradient( 25deg, rgb(23,255,211) 0%, rgb(211,252,113) 95%);
+$primary-gradient: linear-gradient( 25deg, rgb(223, 236, 4) 0%, rgb(223, 236, 4) 95%);
 $primary-gradient-alt: linear-gradient( 205deg, rgb(23,255,211) 0%, rgb(211,252,113) 95%);
 $secondary-gradient: linear-gradient( 6deg, rgb(23,255,211) 0%, rgb(35,227,238) 100%);
 $secondary-gradient-alt: linear-gradient( 186deg, rgb(23,255,211) 0%, rgb(35,227,238) 100%);
